Fixed spacing between pagination buttons.

--- a/styles/components/_home.scss
+++ b/styles/components/_home.scss
@@ -46,7 +46,7 @@
 
   .pagination__home {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-bottom: 3.93em;
     justify-self: center;
     width: 22.21%;
