--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,7 +52,7 @@ main {
 }
 .home__page--buttons .pagination__home {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-bottom: 3.93em;
   justify-self: center;
   width: 22.21%;
